# Research-Vault

./: LICENSE  PROJECT_PLAN.md  README.md  TODO.md  audit_script.mjs
.github/workflows/: build.yml
app/: .commitlintrc.json  .eslintrc.json  .gitignore  README.md  create-structure.sh  create_structure.py  drizzle.config.ts  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
app/docs/: ARCHITECTURE.md  CONTRIBUTING.md
app/src/: App.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: error.rs  lib.rs  main.rs
app/src-tauri/src/commands/: mod.rs  note_commands.rs  project_commands.rs  task_commands.rs
app/src-tauri/src/models/: mod.rs  note.rs  project.rs  task.rs
app/src-tauri/src/services/: db_service.rs  git_service.rs  mod.rs  note_service.rs  project_service.rs  task_service.rs
app/src-tauri/src/state/: app_state.rs
app/src/components/explorer/: FileTree.tsx  index.ts
app/src/components/feedback/: ActionToast.tsx  ActivityTimeline.tsx  ContextualToolbar.tsx  OnboardingIndicator.tsx
app/src/components/layout/: AppLayout.tsx  AppShell.tsx  Breadcrumb.tsx  FocusModeToggle.tsx  Greeting.tsx  QuickActionsBar.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx
app/src/components/project/: CreateProjectDialog.tsx  ProjectCard.tsx  ProjectList.tsx  ProjectSettings.tsx  RecentProjects.tsx  index.ts
app/src/styles/: globals.css
app/tests/e2e/: critical-flows.spec.ts  setup.ts
app/tests/unit/: backup.service.test.ts
(+168 files in other folders)
